New Changes Made

--- a/Mega Music School/Views/Account/StudentRegister.cshtml
+++ b/Mega Music School/Views/Account/StudentRegister.cshtml
@@ -92,7 +92,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <label asp-for="PhoneNumber">Phone</label>
-                        <input asp-for="PhoneNumber" class="form-control" type="text" Placeholder="Phone" />
+                        <input asp-for="PhoneNumber" class="form-control" type="number" Placeholder="Phone" />
                     </div>
                 </div>
 
