--- a/Mega Music School/Views/Admin/Contact.cshtml
+++ b/Mega Music School/Views/Admin/Contact.cshtml
@@ -11,8 +11,7 @@
                 <div class="card-body">
                     @*<h5 class="card-title text-center">COURSE PAGE</h5>*@
 
-
-                    <i class="fas fa-address-book" style="font-size:79px;color:red"></i>
+                    <i class="fa-solid fa-address-book" style="font-size:40px;color:red"></i>
                     Contact Us
                     0903121221
                     EMAIL: MEGAMEDIA@GMAIL.COM
