--- a/Mega Music School/Views/Home/Entertainment.cshtml
+++ b/Mega Music School/Views/Home/Entertainment.cshtml
@@ -54,11 +54,12 @@
                             {
                                 <div class="card">
                                     <div class="card-body">
-                                        <p><strong>Click to play:</strong></p>
+                                        <h5 class="card-title text-center text-primary"><b>@Upload.SongTitle</b></h5>
                                         <audio controls muted>
                                             <source src="@Upload.Mp3Upload" type="audio/mpeg">
                                         </audio>
-
+                                        <p class="card-text">@Upload.SongDetails</p>
+                                        <p><strong>Click to play:</strong></p>
                                     </div>
                                 </div>
                             }
