--- a/Mega Music School/Views/Home/Index.cshtml
+++ b/Mega Music School/Views/Home/Index.cshtml
@@ -71,9 +71,8 @@
 
 
     <div class="container-fluid">
-        <h2 class="text-justify text-center text-danger"><strong>MegaMegia Facet</strong></h2> <br />
+  @*      <h2 class="text-justify text-center text-danger"><strong>MegaMegia Facet</strong></h2> <br />*@
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
-
             <ul class="carousel-indicators">
                 <li data-target="#demo" data-slide-to="0" class="active"></li>
                 <li data-target="#demo" data-slide-to="1"></li>
@@ -96,7 +95,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img src="./images/sing.jpg" style="width: 100%; height:150%"/>
+                    <img src="./images/sing.jpg" style="width: 100%; height:150%" />
                 </div>
 
             </div>
@@ -113,28 +112,24 @@
     <br>
 
     <div class="container">
-        <h2 class="text-center text-bg-secondary">
-            REGISTER TO GET UPDATES ABOUT US
-        </h2>
-        <label class="name"><strong>Name:</strong></label>
-        <input type="text" name="" class="form-control">
+        <div class="card">
+            <div class="card-body">
+                <h3 class="card-title text-center text-primary"><strong>WANNA HEAR ABOUT OUR UPDATE</strong></h3>
+                <label class="name"><strong>Name:</strong></label>
+                <input type="text" name="" class="form-control">
 
-        <br>
-        <label class="name"><strong>E-mail:</strong></label>
-        <input type="text" name="" class="form-control">
+                <label class="name"><strong>E-mail:</strong></label>
+                <input type="text" name="" class="form-control">
 
-        <br>
-        <label class="name"><strong>Password:</strong></label>
-        <input type="text" name="" class="form-control">
-        <br>
-
-        <button type="button" class="btn btn-outline-primary">Submit</button>
+                <label class="name"><strong>Password:</strong></label>
+                <input type="text" name="" class="form-control">
+                <br>
+                <button type="button" class="text-center btn btn-outline-primary">Submit</button>
+            </div>
+            <br>
+        </div>
     </div>
-    <br>
-    <br>
-
-
-    <br>
+    
     <br>
     <div class="container-fluid">
         <div class="row justify-content-center">
