--- a/Mega Music School/Views/Account/Register.cshtml
+++ b/Mega Music School/Views/Account/Register.cshtml
@@ -46,23 +46,23 @@
 
                 <div class="row">
                     <div class="col-md-6">
-                        <label asp-for="NormalizedUserName">Username</label>
-                        <input asp-for="NormalizedUserName" class="form-control" type="text" Placeholder="Enter First Name" />
+                        <label asp-for="UserName">Username</label>
+                        <input asp-for="UserName" required class="form-control" type="text" Placeholder="Enter First Name" />
                     </div>
                     <div class="col-md-6">
                         <label asp-for="Email">Email</label>
-                        <input asp-for="Email" class="form-control" type="Email" Placeholder="Enter Email" />
+                        <input asp-for="Email" required class="form-control" type="Email" Placeholder="Enter Email" />
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-6">
                         <label asp-for="Password">Password</label>
-                        <input asp-for="Password" class="form-control" type="password" Placeholder="Enter Password" />
+                        <input asp-for="Password" required class="form-control" type="password" Placeholder="Enter Password" />
                     </div>
                     <div class="col-md-6">
                         <label asp-for="ConfirmPassword">Confirm Password</label>
-                        <input asp-for="ConfirmPassword" class="form-control" type="password" Placeholder="Enter" />
+                        <input asp-for="ConfirmPassword" required class="form-control" type="password" Placeholder="Enter" />
                     </div>
                 </div>
                 <div class="row">
@@ -73,7 +73,7 @@
 
                     <div class="col-md-6">
                         <label asp-for="PhoneNumber">Phone</label>
-                        <input asp-for="PhoneNumber" class="form-control" type="text" Placeholder="Phone" />
+                        <input asp-for="PhoneNumber" class="form-control" type="number" Placeholder="Phone" />
                     </div>
                 </div>
 
@@ -106,7 +106,7 @@
 
 <script>
 
-
+    //WRITING SCRIPT FOR COUNTRY TO BE SAVED AND ONCE STATE GETS CLICKED, THE LIST OF COUNTRIES CREATED POPULATES
     $(document).ready(function () {
         $("#countryId").change(function () {
             debugger;
