--- a/Mega Music School/Views/Admin/AllAddedCourses.cshtml
+++ b/Mega Music School/Views/Admin/AllAddedCourses.cshtml
@@ -6,12 +6,12 @@
 
 
 <div class="container">
-    <h3>List of Courses Added</h3>
     <div class="card">
         <div class="card-body">
             <section class="section">
                 @if (Model != null && Model.Count() > 0)
                 {
+                    <h3><strong>List of Courses Added</strong></h3>
                     <table class="table table-bordered">
                         <thead>
                             <tr class="text-center">
