--- a/Mega Music School/Views/Shared/_Layout.cshtml
+++ b/Mega Music School/Views/Shared/_Layout.cshtml
@@ -157,7 +157,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-2">
-                        <a class="navbar-brand text-danger" asp-area="" asp-controller="Home" asp-action="Index"><strong>Mega_Music_School</strong></a>
+                        <a class="navbar-brand text-danger" asp-area="" asp-controller="Home" asp-action="Index"><strong>MEGA MUSIC SCHOOL</strong></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                                 aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -201,68 +201,59 @@
             @RenderBody()
         </main>
     </div>
-    <footer class="border-top footer text-muted">
+    <footer class="border-top text-muted">
         <div class="container-fluid bg-dark">
             <div class="row">
-                <div class="col-4 text-white align-center ">
-                    <h3 class="text-justify"><strong>OUR ADDRESSES</strong></h3>
-                    <h4 class="address"><strong>Nigeria Office</strong></h4>
-                    01 Mega-Lane
-                    New G.R.A,
-                    Enugu State,
-                    Nigeria.
-                    <br><br>
-                    <h4 class="address "><strong>USA Office</strong></h4>
-                    Block 43 Mark-Donald Avenue
-                    California.
-                    USA.
-                </div>
-
-                <div class="col-4 text-white">
-                    <h4 class="address"><strong>BE CERTIFIED PROFESSIONALLY ON</strong></h4>
-                    <div style="font-family: sans-serif;">
-                        <p><a href="#" class="text-white ">Piano</a></p>
-                        <p><a href="#" class="text-white mt-5">Base & Lead Guitar</a></p>
-                        <p><a href="#" class="text-white">Violin</a></p>
-                        <p><a href="#" class="text-white">Voicing</a></p>
-                        <p><a href="#" class="text-white">Saxophone</a></p>
-                        <p><a href="#" class="text-white">Voice Instrument</a></p>
+                <div class="col-lg-6 col-md-6 text-white align-center ">
+                    <h5 class="text-justify"><strong>Mega Music School</strong></h5>
+                    <div class="mt-1">
+                        <p>Scheme enacted to teach music in general to all aspirants, getting to your knowledge the full MUSIC CONCEPT.</p>
+                        <p>+234-803-611-4237, +222-312-212-21</p>
+                        <p>megamedia12@gmail.com</p>
                     </div>
-                </div>
-
-                <div class="col-4 text-white">
-                    <h3 class="address text"><strong>CRYPTO GURU</strong></h3>
-                    <div class="facet; width=100">
-                        We help you achieve your Crypto Dream, letting we the help of our teachers, you get advance in knowledge in crypto trading.
-                        <img class="w-50 h-50" src="~/images/Coin.jpg_prev_ui.png" />
-                    </div>
-                </div>
-            </div>
-
-            <div class="row color-red">
-                <div class="col-4 text-justify">
-                    <h4 class="text-white"><strong>CONTACT</strong></h4>
-                    <p class="text-white">
-                        +234-803-611-4237, +222-312-212-21
-                    </p>
-                </div>
-
-                <div class="col-4 text-white text-center">
-                    <br>
-                    megamedia12@gmail.com
-                    <br>
-                    &copy; 2022 - Mega_Music_School - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                </div>
-
-                <div class="col-4">
-                    <h4 class="text-white text-center"><strong>Follow us on Social Media</strong></h4>
-                    <div class="text-center">
+                    <div class="">
                         <img src="~/image/icon-facebook.svg">
                         <img src="~/image/icon-youtube.svg">
                         <img src="~/image/icon-twitter.svg">
                         <img src="~/image/icon-pinterest.svg">
                         <img src="~/image/icon-instagram.svg">
                     </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 text-white align-center ">
+                    <h5 class="text-justify"><strong>OUR ADDRESS</strong></h5>
+                    <p class="address"><strong>Nigeria Office</strong></p>
+                    01 Mega-Lane
+                    New G.R.A,
+                    Enugu State,
+                    Nigeria.
+                    <br><br>
+                    <p class="address "><strong>USA Office</strong></p>
+                    Block 43 Mark-Donald Avenue
+                    California.
+                    USA.
+                </div>
+
+                <div class="col-lg-3 col-md-6 text-white">
+                    <h5 class="address"><strong>GET CERTIFIED ON</strong></h5>
+                    <div style="font-family: sans-serif;">
+                        <ul class="">
+                            <li><a href="#" class="text-white nav-link">Piano</a></li>
+                            <li><a href="#" class="text-white nav-link">Base & Lead Guitar</a></li>
+                            <li><a href="#" class="text-white nav-link">Violin</a></li>
+                            <li><a href="#" class="text-white nav-link">Voicing</a></li>
+                            <li><a href="#" class="text-white nav-link">Saxophone</a></li>
+                            <li><a href="#" class="text-white nav-link">Voice Instrument</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <br />
+            <div class="container-fluid bg-dark">
+                <div class="text-dark text-white text-center">
+                    &copy; Copyright Mega_Music_School - 183893994...
+                    <br />All Rights Reserved <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy.</a>
                 </div>
             </div>
         </div>
