--- a/Mega Music School/Views/Shared/_StudentDashboardLayout.cshtml
+++ b/Mega Music School/Views/Shared/_StudentDashboardLayout.cshtml
@@ -56,8 +56,7 @@
     <header id="header" class="header fixed-top d-flex align-items-center">
 
         <div class="d-flex align-items-center justify-content-between">
-            <a href="index.html" class="logo d-flex align-items-center">
-                <img src="assets/img/School.png" alt="">
+            <a class="logo d-flex align-items-center" asp-action="Index" asp-controller="Home">
                 <span class="d-none d-lg-block">Mega Music School</span>
             </a>
             <i class="bi bi-list toggle-sidebar-btn"></i>
@@ -223,7 +222,7 @@
 
             <li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-menu-button-wide"></i><span>Profile</span><i class="bi bi-chevron-down ms-auto"></i>
+                    <i class="bi bi-person"></i></i><span>Profile</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
                 <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
