--- a/Mega Music School/Views/Student/ViewProfile.cshtml
+++ b/Mega Music School/Views/Student/ViewProfile.cshtml
@@ -38,9 +38,9 @@
                 <li class="nav-item">
                     <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">Overview</button>
                 </li>
-                <li class="nav-item">
+                @*<li class="nav-item">
                     <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password">Change Password</button>
-                </li>
+                </li>*@
 
             </ul>
             <div class="tab-content pt-2">
